--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body{
     margin: 0 ;
     font-size: 16px;
-    background-color: #009688;
+    background-color: #74b3ad;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
@@ -99,7 +99,7 @@ font-weight: 400;
 .quiz-box .question-number{
     font-size: 18px;
     color: #009688;
-    font-weight: 600; 
+    font-weight: 600;
     border-bottom: 1px solid #cccccc;
     padding-bottom: 10px;
     line-height: 25px;
@@ -148,15 +148,15 @@ font-weight: 400;
 }
 .quiz-box .option-container .option.correct::before{
 
-content:'' ; 
+content:'' ;
 position: absolute;
 Left:0;
 top:0;
 height: 100%;
 width: 100%;
-background-color: green;
+background-color: #009688;
 z-index: -1;
-animation: slideInLeft .5s ease forwards; 
+animation: slideInLeft .5s ease forwards;
 
 }
 @keyframes slideInLeft{
@@ -170,16 +170,16 @@ animation: slideInLeft .5s ease forwards;
 }
 .quiz-box .option-container .option.wrong::before{
 
-    content:'' ; 
+    content:'' ;
     position: absolute;
     Left:0;
     top:0;
     height: 100%;
     width: 100%;
-    background-color: red;
+    background-color: #f74865;
     z-index: -1;
-    animation: slideInLeft .5s ease forwards; 
-    
+    animation: slideInLeft .5s ease forwards;
+
     }
 .quiz-box .option-container .option-wrong{
 
@@ -209,10 +209,10 @@ animation: slideInLeft .5s ease forwards;
 }
 
 .quiz-box .answers-indicator div.correct{
-background-color: green;
+background-color: #009688;
 }
 .quiz-box .answers-indicator div.wrong{
-background-color: red;
+background-color: #f74865;
 }
 
 
@@ -264,27 +264,27 @@ background-color: red;
     font-weight: 500;
     margin-bottom:15px;
     line-height: 25px;
-    
+
     }
-    
+
     .contact-box p{
     font-size: 16px;
     margin-bottom: 10px;
     line-height: 22px;
     color: #000000;
     font-weight: 400;
-    
+
     }
     .contact-box p span{
         font-weight: 500;
     }
     .contact-box .btn{
         margin-top: 20px;
-    
+
     }
     .btn{
         padding: 15px 15px;
-        background-color: #009688;
+        background-color: #74b3ad;
         color: #ffffff;
         border: none;
         border-radius: 5px ;
@@ -292,17 +292,17 @@ background-color: red;
         font-size: 16px;
         cursor: pointer;
         display: inline-block;
-    
+
     }
     .btn:hover {
         background-color:  #009688;
      }
     .btn:active {
-        background-color: orange;
-        box-shadow: 0 5px orange;
+        background-color: #f7a52d;
+        box-shadow: 0 5px #ffdfb0;
         transform: translateY(2px);
      }
-    
+
 
 .lbl {
     text-align: left;
